worked on the header ul section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>fashion-hub-e-commerce-website</title>
 </head>
 <body>
+  <header>
+    <h1>FashionHub</h1>
+    <ul>
+      <li>Category</li>
+      <li>Brand</li>
+      <li>Contact</li>
+    </ul>
+  </header>
   <script src="assets/script/index.js" type="module"></script>
 </body>
 </html>
