worked on the header section h1

--- a/index.html
+++ b/index.html
@@ -7,12 +7,41 @@
   <title>fashion-hub-e-commerce-website</title>
 </head>
 <body>
-  <header>
+  <header class="navbar">
     <h1>FashionHub</h1>
     <ul>
-      <li>Category</li>
+      <li class="active">Category
+        <div style="width:auto;">
+          <div style="float:left; width:10%;">
+              <ul class="subnavbar">
+                  <li class="active"><a href="#">Men's Categories:</a>
+                  </li>
+                  <li class="active"><a href="#">Tops</a>
+                  </li>
+                  <li class="active"><a href="#">Bottoms</a>
+                  </li>
+                  <li class="active"><a href="#">Shoes and accessories</a>
+                  </li>
+              </ul>
+          </div>
+          <div style="float:right;width:10%;">
+              <ul class="subnavbar">
+                  <li class="active"><a href="#">Women's Categories:</a>
+                  </li>
+                  <li class="active"><a href="#">Tops</a>
+                  </li>
+                  <li class="active"><a href="#">Bottoms</a>
+                  </li>
+                  <li class="active"><a href="#">Shoes and accessories</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </li>
+      </li>
       <li>Brand</li>
       <li>Contact</li>
+      <li>FAQs</li>
     </ul>
   </header>
   <script src="assets/script/index.js" type="module"></script>
