edited folder structure created the navbar styled it

--- a/index.html
+++ b/index.html
@@ -1,49 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/style/style.css">
-  <title>fashion-hub-e-commerce-website</title>
-</head>
-<body>
-  <header class="navbar">
-    <h1>FashionHub</h1>
-    <ul>
-      <li class="active">Category
-        <div style="width:auto;">
-          <div style="float:left; width:10%;">
-              <ul class="subnavbar">
-                  <li class="active"><a href="#">Men's Categories:</a>
-                  </li>
-                  <li class="active"><a href="#">Tops</a>
-                  </li>
-                  <li class="active"><a href="#">Bottoms</a>
-                  </li>
-                  <li class="active"><a href="#">Shoes and accessories</a>
-                  </li>
-              </ul>
-          </div>
-          <div style="float:right;width:10%;">
-              <ul class="subnavbar">
-                  <li class="active"><a href="#">Women's Categories:</a>
-                  </li>
-                  <li class="active"><a href="#">Tops</a>
-                  </li>
-                  <li class="active"><a href="#">Bottoms</a>
-                  </li>
-                  <li class="active"><a href="#">Shoes and accessories</a>
-                  </li>
-              </ul>
-          </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/public/public.css">
+    <link rel="stylesheet" href="./index.css" />
+    <title>fashion-hub-e-commerce-website</title>
+  </head>
+  <body>
+    <nav id="navbar">
+    </nav>
+
+    <div class="buy-now">
+      <div class="left-side">
+        <h1>Grab Upto 50% Off On
+          Selected Headphone</h1>
+          <button id="buy-btn">Buy Now</button>
       </div>
-  </li>
-      </li>
-      <li>Brand</li>
-      <li>Contact</li>
-      <li>FAQs</li>
-    </ul>
-  </header>
-  <script src="assets/script/index.js" type="module"></script>
-</body>
+      <img src="/public/image/backgroundimg.svg" alt="">
+    </div>
+  </body>
+  <script src="/public/public.js" type="module"></script>
+  <script src="./index.js" type="module"></script>
 </html>
