--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -11,6 +11,9 @@
   <nav id="navbar">
   </nav>
 
+  <main>
+    Contact page content
+  </main>
 </body>
 <script type="module" src="/public/public.js"></script>
 <script type="module" src="./contact.js"></script>
