--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/public.css">
+    <link rel="stylesheet" href="./public/public.css">
     <link rel="stylesheet" href="./index.css" />
     <title>fashion-hub-e-commerce-website</title>
+    
   </head>
   <body>
     <nav id="navbar">
@@ -17,9 +18,9 @@
           Selected Headphone</h1>
           <button id="buy-btn">Buy Now</button>
       </div>
-      <img src="./assets/image/backgroundimg.svg" alt="">
+      <img src="./public/image/backgroundimg.svg" alt="">
     </div>
   </body>
-  <script src="./assets/public.js" type="module"></script>
+  <script src="./public/public.js" type="module"></script>
   <script src="./index.js" type="module"></script>
 </html>
