added check for github host to use absolute path

--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/public.css">
+    <link rel="stylesheet" href="./public/public.css" />
     <link rel="stylesheet" href="./index.css" />
     <title>fashion-hub-e-commerce-website</title>
-    
   </head>
   <body>
-    <nav id="navbar">
-    </nav>
+    <nav id="navbar"></nav>
 
     <div class="buy-now">
       <div class="left-side">
-        <h1>Grab Upto 50% Off On
-          Selected Headphone</h1>
-          <button id="buy-btn">Buy Now</button>
+        <h1>Grab Upto 50% Off On Selected Headphone</h1>
+        <button id="buy-btn">Buy Now</button>
       </div>
-      <img src="./public/image/backgroundimg.svg" alt="">
+      <img src="./public/image/backgroundimg.svg" alt="" />
     </div>
   </body>
   <script src="./public/public.js" type="module"></script>
