--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/public/public.css">
+  <link rel="stylesheet" href="../../../public/public.css">
   <link rel="stylesheet" href="./contact.css">
   <title>Contact</title>
 </head>
@@ -15,6 +15,6 @@
     Contact page content
   </main>
 </body>
-<script type="module" src="/public/public.js"></script>
+<script type="module" src="../../../public/public.js"></script>
 <script type="module" src="./contact.js"></script>
 </html>
