created the buy now section in the index.js and copied the styling from bunow.css to the public css folder

--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
   <body>
     <nav id="navbar"></nav>
 
-    <div class="buy-now">
-      <div class="left-side">
-        <h1>Grab Upto 50% Off On Selected Headphone</h1>
-        <button id="buy-btn">Buy Now</button>
-      </div>
-      <img src="./public/image/backgroundimg.svg" alt="" />
-    </div>
+    <div id="buy-now"></div>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
