added the product info section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <nav id="navbar"></nav>
 
     <div id="buy-now"></div>
+
+    <div id="product-info"></div>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
