--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -12,8 +12,96 @@
   </nav>
 
   <main>
-    Contact page content
+    <hr id="hr" />
+    <div class="contain">
+      <div class="contain1">
+        <div class="contain11">
+          <p class="text1">Other ways to connect</p> <br>
+          <p class="text2">we love to hear from you. our friendly team is always <br>
+            here to chat.</p>
+          <div class="icon1">
+            <img src="./image/Vector.png" id="icone" alt="">
+            <div class="icon11">
+              <p class="iconne">Reach us on email</p> <br>
+              <p class="small">our friendly team is here to help.</p> <br>
+              <a href="#" id="link">info@yourmail.com</a>
+            </div>
+          </div>
+          <div class="icon1">
+            <img src="./image/Frame.png" id="icone" alt="">
+            <div class="icon11">
+              <p class="iconne">For Careers</p> <br>
+              <p class="small">Send your resume on.</p> <br>
+              <a href="#" id="link">careers@yourmail.com</a>
+            </div>
+          </div>
+          <div class="icon1">
+            <img src="./image/Vector (1).png" id="icone" alt="">
+            <div class="icon11">
+              <p class="iconne">Phone</p> <br>
+              <p class="small">Mon-Fri from 8am to 5pm.</p> <br>
+              <a href="#" id="link">+01 (614) 874 8005</a><br>
+              <a href="#" id="link">+01 (614) 652 6254</a>
+            </div>
+          </div>
+          <div class="icon1">
+            <img src="./image/Frame (1).png" id="icone" alt="">
+            <div class="icon11">
+              <p class="iconne">Office</p> <br>
+              <p class="small">come ay hello at our office HQ.</p> <br>
+              <a href="#" id="link">2814 Fisher Rd, 1st Floor, Opp.alex street, <br> Columbus, ohio 43204</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="conatin2">
+        <p class="up1">Love to hear from you, <br>Get in touch</p>
+        <i class="fas fa-hand-wave"></i>
+        <div class="form">
+          <div class="left-form">
+            <div class="input">
+              <label for="name">Your Name</label>
+              <input type="text" placeholder="Edward Snowden" required name="name">
+            </div>
+            <br>
+            <div class="input">
+              <label for="">Phone No.</label>
+              <div class="coller">
+                <select name="" id="drop">
+                  <option value="">+91</option>
+                  <option value="">+237</option>
+                  <option value="">+419</option>
+                  <option value="">+123</option>
+                </select>
+                <input id="root" type="text" placeholder="Enter your phone No.">
+              </div>
+            </div>
+          </div>
+          <div class="left-form">
+            <div class="input">
+              <label for="email">Your Email</label>
+              <input type="email" placeholder="itanexmple@gmail.com" required name="email">
+            </div>
+            <br>
+            <div class="input">
+              <label for="">What you are interested</label>
+              <input type="text" placeholder="Design and Branding " required>
+            </div>
+          </div>
+
+        </div>
+        <div class="textea">
+          <label for="">Message</label>
+          <textarea name="" id="for" cols="10" rows="10" placeholder="let tell us know your project about"></textarea>
+        </div>
+        <button type="submit" id="send">Send message <i class="fas fa-paper-plane"></i>
+        </button>
+      </div>
+
+    </div>
   </main>
+
+  <footer id="footer"> </footer>
 </body>
 <script type="module" src="./contact.js"></script>
 </html>
