--- a/src/pages/prod-details/prod-details.html
+++ b/src/pages/prod-details/prod-details.html
@@ -11,6 +11,94 @@
     <nav id="navbar"></nav>
 
     <h1>Product detail</h1>
+    <hr id="hr">
+    <div class="details-picture">
+
+      <div class="all-left">
+        <div class="details-left">
+          <select name="" id="select">
+            <option value="">home</option>
+          </select>
+          <select name="" id="select">
+            <option value="">Decoration</option>
+          </select>
+          <select name="" id="select">
+            <option value="">Furniture</option>
+          </select>
+          <select name="" id="select" class="gras">
+            <option value="">Sideboard</option>
+          </select>
+        </div>
+        <div class="comment">
+          <div class="texte">
+            <p id="text-comment">Embrace Sideboard</p>
+            <p class="text-color">Teixeira Design Studio</p>
+          </div>
+          <div class="icons-comment">
+            <i id="ic_comment" class="fa-regular fa-heart">109</i>
+            <i id="ic_commen" class="fa-regular fa-bookmark"></i>
+            <i id="ic_comme" class="fa-regular fa-face-meh"></i>
+          </div>
+        </div>
+        <hr id="hrr">
+        <div class="prix">
+          <div class="item-price">
+            <img src="./image/left.png" alt="" class="left">
+
+          </div>
+          <hr id="hrr">
+          <div class="frame">
+            <img class="left" src="./image/Frame 20.png" alt="">
+          </div>
+          <hr id="hrr">
+          <div class="comment-all">
+            <img src="./image/Frame 26.png" alt="">
+          </div>
+          <hr id="hrr">
+          <div class="buttom">
+            <input class="a5" type="text" value="0"  >
+            <button class="addd" id="add" data-name ="${item.id}"> <i class="fa-solid fa-bag-shopping"></i>Add To Card</button>
+          </div>
+          <hr id="hrr">
+
+          <img src="./image/Frame 31.png" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="down">
+      <div class="downLeft">
+        <div class="reviews">
+          <p class="blue">Description</p>
+          <p class="black">Reviews</p>
+        </div>
+        <div class="line">
+          <img src="./image/first.png" alt="">
+          <img src="./image/Rectangle 247.png" alt="">
+        </div>
+        <div class="benefict">
+          <img src="./image/Group 88.png" alt="">
+        </div>
+
+        <div class="details">
+          <img src="./image/Group 90.png" alt="">
+        </div>
+        <div class="more">
+          <img src="./image/Group 91.png" alt="">
+        </div>
+      </div>
+      <div class="all-item">
+        <p class="simitem"> Similar Items You Might Also Like</p>
+        <div class="similar">
+          <div class="sim">
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+    <footer id="footer"> </footer>
   </body>
   <script type="module" src="./prod-details.js"></script>
 </html>
