--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,107 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../../public/public.css">
-  <link rel="stylesheet" href="./contact.css">
-  <title>Contact</title>
-</head>
-<body>
-  <nav id="navbar">
-  </nav>
-
-  <main>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="stylesheet" href="../../../public/public.css" />
+    <link rel="stylesheet" href="./contact.css" />
+    <title>Contact</title>
+  </head>
+  <body>
+    <nav id="navbar"></nav>
     <hr id="hr" />
-    <div class="contain">
-      <div class="contain1">
-        <div class="contain11">
-          <p class="text1">Other ways to connect</p> <br>
-          <p class="text2">we love to hear from you. our friendly team is always <br>
-            here to chat.</p>
-          <div class="icon1">
-            <img src="./image/Vector.png" id="icone" alt="">
-            <div class="icon11">
-              <p class="iconne">Reach us on email</p> <br>
-              <p class="small">our friendly team is here to help.</p> <br>
-              <a href="#" id="link">info@yourmail.com</a>
+
+    <main>
+
+      <div class="information-section">
+            <h2 class="text1">Other ways to connect</h2>
+            <p class="text2">
+              we love to hear from you. our friendly team is always <br />
+              here to chat.
+            </p>
+            <div class="reach-on">
+              <img src="../../../public/image/message.svg" id="icone" alt="" />
+
+              <div class="reach-on-txt">
+                <p class="iconne">Reach us on email</p>
+                <br />
+                <p class="small">our friendly team is here to help.</p>
+                <br />
+                <a href="#" id="link">info@yourmail.com</a>
+              </div>
             </div>
-          </div>
-          <div class="icon1">
-            <img src="./image/Frame.png" id="icone" alt="">
-            <div class="icon11">
-              <p class="iconne">For Careers</p> <br>
-              <p class="small">Send your resume on.</p> <br>
-              <a href="#" id="link">careers@yourmail.com</a>
+
+            <div class="reach-on">
+              <span class="material-symbols-outlined" id="icon">
+                service_toolbox
+              </span>
+              <div class="reach-on-txt">
+                <p class="iconne">For Careers</p>
+                <br />
+                <p class="small">Send your resume on.</p>
+                <br />
+                <a href="#" id="link">careers@yourmail.com</a>
+              </div>
             </div>
-          </div>
-          <div class="icon1">
-            <img src="./image/Vector (1).png" id="icone" alt="">
-            <div class="icon11">
-              <p class="iconne">Phone</p> <br>
-              <p class="small">Mon-Fri from 8am to 5pm.</p> <br>
-              <a href="#" id="link">+01 (614) 874 8005</a><br>
-              <a href="#" id="link">+01 (614) 652 6254</a>
+
+            <div class="reach-on">
+              <span class="material-symbols-outlined" id="icon"> call </span>
+
+              <div class="reach-on-txt">
+                <p class="iconne">Phone</p>
+                <br />
+                <p class="small">Mon-Fri from 8am to 5pm.</p>
+                <br />
+                <a href="#" id="link">+01 (614) 874 8005</a><br />
+                <a href="#" id="link">+01 (614) 652 6254</a>
+              </div>
             </div>
-          </div>
-          <div class="icon1">
-            <img src="./image/Frame (1).png" id="icone" alt="">
-            <div class="icon11">
-              <p class="iconne">Office</p> <br>
-              <p class="small">come ay hello at our office HQ.</p> <br>
-              <a href="#" id="link">2814 Fisher Rd, 1st Floor, Opp.alex street, <br> Columbus, ohio 43204</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="conatin2">
-        <p class="up1">Love to hear from you, <br>Get in touch</p>
-        <i class="fas fa-hand-wave"></i>
-        <div class="form">
-          <div class="left-form">
-            <div class="input">
-              <label for="name">Your Name</label>
-              <input type="text" placeholder="Edward Snowden" required name="name">
-            </div>
-            <br>
-            <div class="input">
-              <label for="">Phone No.</label>
-              <div class="coller">
-                <select name="" id="drop">
-                  <option value="">+91</option>
-                  <option value="">+237</option>
-                  <option value="">+419</option>
-                  <option value="">+123</option>
-                </select>
-                <input id="root" type="text" placeholder="Enter your phone No.">
+
+            <div class="reach-on">
+              <span class="material-symbols-outlined" id="icon"> location_on </span>
+
+              <div class="reach-on-txt">
+                <p class="iconne">Office</p>
+                <br />
+                <p class="small">come ay hello at our office HQ.</p>
+                <br />
+                <a href="#" id="link"
+                  >2814 Fisher Rd, 1st Floor, Opp.alex street, <br />
+                  Columbus, ohio 43204</a
+                >
               </div>
             </div>
           </div>
-          <div class="left-form">
-            <div class="input">
-              <label for="email">Your Email</label>
-              <input type="email" placeholder="itanexmple@gmail.com" required name="email">
+      
+        <div class="form-section">
+          <h2 class="up1">Love to hear from you, <br />Get in touch &#128075; </h2>
+
+          <form class="form">
+            <div class="left-form">
+              <div class="input">
+                <label for="name">Your Name</label>
+                <input
+                  type="text"
+                  placeholder="Edward Snowden"
+                  required
+                  name="name"
+                />
+              </div>
+              <br />
+              <div class="input">
+                <label for="">Phone No.</label>
+                <div class="coller">
+                  <select name="" id="drop">
+                    <option value="">+91</option>
+                    <option value="">+237</option>
+                    <option value="">+419</option>
+                    <option value="">+123</option>
+                  </select>
+                  <input
+                    id="root"
+                    type="text"
+                    placeholder="Enter your phone No."
+                  />
+                </div>
+              </div>
             </div>
-            <br>
-            <div class="input">
-              <label for="">What you are interested</label>
-              <input type="text" placeholder="Design and Branding " required>
+            <div class="left-form">
+              <div class="input">
+                <label for="email">Your Email</label>
+                <input
+                  type="email"
+                  placeholder="itanexmple@gmail.com"
+                  required
+                  name="email"
+                />
+              </div>
+              <br />
+              <div class="input">
+                <label for="">What you are interested</label>
+                <input
+                  type="text"
+                  placeholder="Design and Branding "
+                  required
+                />
+              </div>
             </div>
+          </form>
+          <div class="textea">
+            <label for="">Message</label>
+            <textarea
+              name=""
+              id="for"
+              cols="10"
+              rows="10"
+              placeholder="let tell us know your project about"
+            ></textarea>
           </div>
-
+          <button type="submit" id="send">
+            Send message 
+            <span class="material-symbols-outlined">
+              north_east
+              </span>
+          </button>
         </div>
-        <div class="textea">
-          <label for="">Message</label>
-          <textarea name="" id="for" cols="10" rows="10" placeholder="let tell us know your project about"></textarea>
-        </div>
-        <button type="submit" id="send">Send message <i class="fas fa-paper-plane"></i>
-        </button>
       </div>
+    </main>
 
-    </div>
-  </main>
-
-  <footer id="footer"> </footer>
-</body>
-<script type="module" src="./contact.js"></script>
+    <footer id="footer"></footer>
+  </body>
+  <script type="module" src="./contact.js"></script>
 </html>
