added a styling the contact page info section

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -18,11 +18,14 @@
     <main>
 
       <div class="information-section">
+           <div class="intro">
             <h2 class="text1">Other ways to connect</h2>
             <p class="text2">
               we love to hear from you. our friendly team is always <br />
               here to chat.
             </p>
+           </div>
+           
             <div class="reach-on">
               <img src="../../../public/image/message.svg" id="icone" alt="" />
 
