added a styling the contact page form section

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="reach-on">
-              <span class="material-symbols-outlined" id="icon">
+              <span class="material-symbols-outlined" id="icone">
                 service_toolbox
               </span>
               <div class="reach-on-txt">
@@ -52,7 +52,7 @@
             </div>
 
             <div class="reach-on">
-              <span class="material-symbols-outlined" id="icon"> call </span>
+              <span class="material-symbols-outlined" id="icone"> call </span>
 
               <div class="reach-on-txt">
                 <p class="iconne">Phone</p>
@@ -65,7 +65,7 @@
             </div>
 
             <div class="reach-on">
-              <span class="material-symbols-outlined" id="icon"> location_on </span>
+              <span class="material-symbols-outlined" id="icone"> location_on </span>
 
               <div class="reach-on-txt">
                 <p class="iconne">Office</p>
@@ -84,71 +84,75 @@
           <h2 class="up1">Love to hear from you, <br />Get in touch &#128075; </h2>
 
           <form class="form">
-            <div class="left-form">
-              <div class="input">
-                <label for="name">Your Name</label>
-                <input
-                  type="text"
-                  placeholder="Edward Snowden"
-                  required
-                  name="name"
-                />
-              </div>
-              <br />
-              <div class="input">
-                <label for="">Phone No.</label>
-                <div class="coller">
-                  <select name="" id="drop">
-                    <option value="">+91</option>
-                    <option value="">+237</option>
-                    <option value="">+419</option>
-                    <option value="">+123</option>
-                  </select>
+            <div class="user-details">
+              <div class="left">
+                <div class="input">
+                  <label for="name">Your Name</label>
                   <input
-                    id="root"
                     type="text"
-                    placeholder="Enter your phone No."
+                    placeholder="Edward Snowden"
+                    required
+                    name="name"
                   />
                 </div>
+                <br />
+                <div class="input">
+                  <label for="">Phone No.</label>
+                  <div class="coller">
+                    <select name="" id="drop">
+                      <option value="">+91</option>
+                      <option value="">+237</option>
+                      <option value="">+419</option>
+                      <option value="">+123</option>
+                    </select>
+                    <input
+                      id="root"
+                      type="text"
+                      placeholder="Enter your phone No."
+                    />
+                  </div>
+                </div>
               </div>
+              <div class="ri">
+                <div class="input">
+                  <label for="email">Your Email</label>
+                  <input
+                    type="email"
+                    placeholder="itanexmple@gmail.com"
+                    required
+                    name="email"
+                  />
+                </div>
+                <br />
+                <div class="input">
+                  <label for="">What you are interested</label>
+                  <input
+                    type="text"
+                    placeholder="Design and Branding "
+                    required
+                  />
+                </div>
+              </div>ght
             </div>
-            <div class="left-form">
-              <div class="input">
-                <label for="email">Your Email</label>
-                <input
-                  type="email"
-                  placeholder="itanexmple@gmail.com"
-                  required
-                  name="email"
-                />
-              </div>
-              <br />
-              <div class="input">
-                <label for="">What you are interested</label>
-                <input
-                  type="text"
-                  placeholder="Design and Branding "
-                  required
-                />
-              </div>
+
+            <div class="textea">
+              <label for="">Message</label>
+              <textarea
+                name=""
+                id="for"
+                cols="10"
+                rows="10"
+                placeholder="let tell us know your project about"
+              ></textarea>
             </div>
+            <button type="submit" id="send">
+              Send message 
+              <span class="material-symbols-outlined">
+                north_east
+                </span>
+            </button>
           </form>
-          <div class="textea">
-            <label for="">Message</label>
-            <textarea
-              name=""
-              id="for"
-              cols="10"
-              rows="10"
-              placeholder="let tell us know your project about"
-            ></textarea>
-          </div>
-          <button type="submit" id="send">
-            Send message 
-            <span class="material-symbols-outlined">
-              north_east
-              </span>
-          </button>
+          
         </div>
       </div>
     </main>
