completed the contact page

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -113,7 +113,7 @@
                   </div>
                 </div>
               </div>
-              <div class="ri">
+              <div class="right">
                 <div class="input">
                   <label for="email">Your Email</label>
                   <input
@@ -132,11 +132,10 @@
                     required
                   />
                 </div>
-              </div>ght
+              </div>
             </div>
 
-            <div class="textea">
-              <label for="">Message</label>
+              <label for="" id="textarea">Message</label>
               <textarea
                 name=""
                 id="for"
@@ -144,7 +143,7 @@
                 rows="10"
                 placeholder="let tell us know your project about"
               ></textarea>
-            </div>
+            
             <button type="submit" id="send">
               Send message 
               <span class="material-symbols-outlined">
