--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./index.css" />
     <title>fashion-hub-e-commerce-website</title>
   </head>
@@ -22,28 +29,28 @@
       <div id="card">
         <div class="subcard" id="subcards">
           <a href="./src/pages/prod-details/prod-details.html"
-            ><img src="public/image/My project (1) 1.png" id="details-page"
+            ><img src="public/image/My project (1) 1.png" id="product-image"
           /></a>
           <i class="fa-regular fa-heart"></i>
         </div>
 
-        <div class="snikersprice">
-          <span id="snykers">TDX Sinkers</span>
-          <span id="snykers-price">₹ 675.00</span>
+        <div class="product-price-details">
+          <span id="productname">TDX Sinkers</span>
+          <span id="product-price">₹ 675.00</span>
         </div>
 
-        <div class="shoes-available" data-name>
-          <p id="shoes">5 types of shoes available</p>
+        <div class="avalaibity" data-name>
+          <p id="product-type">5 types of shoes available</p>
         </div>
-        <div class="stars">
-          <span class="material-symbols-outlined"> star </span>
-          <span class="material-symbols-outlined"> star </span>
-          <span class="material-symbols-outlined"> star </span>
-          <span class="material-symbols-outlined"> star </span>
-          <span class="material-symbols-outlined"> star </span>
+        <div class="product-rating">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
           <p id="number">(121)</p>
         </div>
-        <div class="date">
+        <div class="buttons">
           <button id="addtocard" class="addtocard" data-imageid="">
             Add to Card
           </button>
